Add activity fence

--- a/app/src/main/res/layout/activity_activity_fence.xml
+++ b/app/src/main/res/layout/activity_activity_fence.xml
@@ -3,28 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".ActivityFenceActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/headphoneButton"
+            android:id="@+id/register_fence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Headphone Fence" />
+            android:text="Register Activity Fence" />
 
         <Button
-            android:id="@+id/activityButton"
+            android:id="@+id/unregister_fence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Activity Fence" />
+            android:text="Unregister Activity Fence" />
 
+        <TextView
+            android:id="@+id/activityTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:textSize="30sp" />
     </LinearLayout>
-
 </RelativeLayout>
